--- a/.gitignore
+++ b/.gitignore
@@ -214,5 +214,8 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+postgres_data
+pgadmin_data
+mysql_data
 
 # End of https://www.toptal.com/developers/gitignore/api/node,windows,linux,macos
